// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check FormValidityProvider should click on the button and get a custom error message 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  background: rgba(0, 0, 0, 0.15);
}

.css-0:disabled,
[data-css-0]:disabled,
.css-0[data-simulate-disabled],
[data-css-0][data-simulate-disabled] {
  background: rgba(0, 0, 0, 0.15);
}

.css-7,
[data-css-7] {
  position: relative;
}

.css-8,
[data-css-8] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  position: absolute;
  bottom: 0;
}

.css-11,
[data-css-11] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-12,
[data-css-12] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-13,
[data-css-13] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-14,
[data-css-14] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-15,
[data-css-15] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-15:-webkit-autofill ~ .label,
[data-css-15]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-15:-webkit-autofill ~ .checkmark,
[data-css-15]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-15:-webkit-autofill,
[data-css-15]:-webkit-autofill,
.css-15[data-simulate-webkitautofill],
[data-css-15][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-19,
[data-css-19] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-9=""
  >
    <div
      data-css-9=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-8=""
      data-css-11=""
      data-css-10=""
    >
      <button
        data-css-0=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-9=""
          data-css-12=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-13=""
    data-css-14=""
  >
    <div
      data-css-7=""
      data-css-9=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <input
        aria-required={true}
        data-css-15=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
      <div
        className="checkmark"
        data-css-19=""
        data-css-9=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-9=""
          size="xs"
          style={
            Object {
              "fill": "lightGrey",
              "height": 16,
              "stroke": false,
              "width": 16,
            }
          }
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Check FormValidityProvider should click on the button and get a custom error message 2`] = `
.css-0,
[data-css-0] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  background: rgba(0, 0, 0, 0.15);
}

.css-0:disabled,
[data-css-0]:disabled,
.css-0[data-simulate-disabled],
[data-css-0][data-simulate-disabled] {
  background: rgba(0, 0, 0, 0.15);
}

.css-7,
[data-css-7] {
  background-color: #c1392b;
  position: absolute;
  bottom: 100%;
  left: 0px;
  z-index: 40;
  width: 100%;
  padding: 12px 15px 15px;
  border-radius: 2px;
  box-shadow: 0 1px 2px 1px rgba(0,0,0,.25);
}

.css-8,
[data-css-8] {
  position: absolute;
  bottom: -10px;
  left: 50%;
  margin-left: -10px;
  display: block;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #c1392b;
}

.css-9,
[data-css-9] {
  position: relative;
}

.css-10,
[data-css-10] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-11,
[data-css-11] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-12,
[data-css-12] {
  position: absolute;
  bottom: 0;
}

.css-13,
[data-css-13] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-14,
[data-css-14] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-15,
[data-css-15] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-16,
[data-css-16] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-17,
[data-css-17] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-17:-webkit-autofill ~ .label,
[data-css-17]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-17:-webkit-autofill ~ .checkmark,
[data-css-17]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-17:-webkit-autofill,
[data-css-17]:-webkit-autofill,
.css-17[data-simulate-webkitautofill],
[data-css-17][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-21,
[data-css-21] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-22,
[data-css-22] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-11=""
  >
    <div
      data-css-11=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-10=""
      data-css-13=""
      data-css-12=""
    >
      <button
        data-css-0=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-11=""
          data-css-14=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-15=""
    data-css-16=""
  >
    <div
      data-css-9=""
      data-css-11=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-11=""
        data-css-7=""
        onClick={[Function]}
      >
        <div
          data-css-22=""
          data-css-11=""
        >
          A nice error message 🐼
        </div>
        <div
          data-css-11=""
          data-css-8=""
        />
      </div>
      <input
        aria-required={true}
        data-css-17=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
      <div
        className="checkmark"
        data-css-21=""
        data-css-11=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-11=""
          size="xs"
          style={
            Object {
              "fill": "lightGrey",
              "height": 16,
              "stroke": false,
              "width": 16,
            }
          }
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Check FormValidityProvider should click on the button and get a default error message 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  background: rgba(0, 0, 0, 0.15);
}

.css-0:disabled,
[data-css-0]:disabled,
.css-0[data-simulate-disabled],
[data-css-0][data-simulate-disabled] {
  background: rgba(0, 0, 0, 0.15);
}

.css-7,
[data-css-7] {
  position: relative;
}

.css-8,
[data-css-8] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  position: absolute;
  bottom: 0;
}

.css-11,
[data-css-11] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-12,
[data-css-12] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-13,
[data-css-13] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-14,
[data-css-14] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-15,
[data-css-15] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-15:-webkit-autofill ~ .label,
[data-css-15]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-15:-webkit-autofill ~ .checkmark,
[data-css-15]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-15:-webkit-autofill,
[data-css-15]:-webkit-autofill,
.css-15[data-simulate-webkitautofill],
[data-css-15][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-19,
[data-css-19] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-9=""
  >
    <div
      data-css-9=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-8=""
      data-css-11=""
      data-css-10=""
    >
      <button
        data-css-0=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-9=""
          data-css-12=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-13=""
    data-css-14=""
  >
    <div
      data-css-7=""
      data-css-9=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <input
        aria-required={true}
        data-css-15=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
      <div
        className="checkmark"
        data-css-19=""
        data-css-9=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-9=""
          size="xs"
          style={
            Object {
              "fill": "lightGrey",
              "height": 16,
              "stroke": false,
              "width": 16,
            }
          }
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Check FormValidityProvider should click on the button and get a default error message 2`] = `
.css-0,
[data-css-0] {
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-item: center;
  justify-content: center;
  height: 100%;
  background: transparent;
  border: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  background: rgba(0, 0, 0, 0.15);
}

.css-0:disabled,
[data-css-0]:disabled,
.css-0[data-simulate-disabled],
[data-css-0][data-simulate-disabled] {
  background: rgba(0, 0, 0, 0.15);
}

.css-7,
[data-css-7] {
  background-color: #c1392b;
  position: absolute;
  bottom: 100%;
  left: 0px;
  z-index: 40;
  width: 100%;
  padding: 12px 15px 15px;
  border-radius: 2px;
  box-shadow: 0 1px 2px 1px rgba(0,0,0,.25);
}

.css-8,
[data-css-8] {
  position: absolute;
  bottom: -10px;
  left: 50%;
  margin-left: -10px;
  display: block;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #c1392b;
}

.css-9,
[data-css-9] {
  position: relative;
}

.css-10,
[data-css-10] {
  background-color: #3598db;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 50px;
  overflow: hidden;
  width: 100%;
}

.css-11,
[data-css-11] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-12,
[data-css-12] {
  position: absolute;
  bottom: 0;
}

.css-13,
[data-css-13] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-14,
[data-css-14] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-15,
[data-css-15] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-16,
[data-css-16] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-17,
[data-css-17] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-17:-webkit-autofill ~ .label,
[data-css-17]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-17:-webkit-autofill ~ .checkmark,
[data-css-17]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-17:-webkit-autofill,
[data-css-17]:-webkit-autofill,
.css-17[data-simulate-webkitautofill],
[data-css-17][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-21,
[data-css-21] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-22,
[data-css-22] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

<form
  onSubmit={[Function]}
>
  <div
    data-css-11=""
  >
    <div
      data-css-11=""
      style={
        Object {
          "height": 50,
        }
      }
    />
    <div
      data-css-10=""
      data-css-13=""
      data-css-12=""
    >
      <button
        data-css-0=""
        onClick={[Function]}
        type="submit"
      >
        <div
          data-css-11=""
          data-css-14=""
        >
          Submit
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-15=""
    data-css-16=""
  >
    <div
      data-css-9=""
      data-css-11=""
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        data-css-11=""
        data-css-7=""
        onClick={[Function]}
      >
        <div
          data-css-22=""
          data-css-11=""
        >
          Default error message from the browser 🐍.
        </div>
        <div
          data-css-11=""
          data-css-8=""
        />
      </div>
      <input
        aria-required={true}
        data-css-17=""
        name="email"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder="Your email"
        required={true}
        type="email"
      />
      <div
        className="checkmark"
        data-css-21=""
        data-css-11=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-11=""
          size="xs"
          style={
            Object {
              "fill": "lightGrey",
              "height": 16,
              "stroke": false,
              "width": 16,
            }
          }
        />
      </div>
    </div>
  </div>
</form>
`;
